--- a/flask_app/static/css/style.css
+++ b/flask_app/static/css/style.css
@@ -14,6 +14,15 @@
   --bs-body-color: white;
 }
 
+.container,
+.container-lg,
+.container-md,
+.container-sm,
+.container-xl,
+.container-xxl {
+  max-width: 1720px;
+}
+
 body {
   font-family: "Architects Daughter", cursive;
   font-weight: 300;
@@ -36,7 +45,7 @@ body {
 
 select {
   background: transparent;
-  border: 1px solid var(--light-pink);
+  border: 1px solid var(--dark-grey) !important;
 }
 
 textarea {
@@ -125,6 +134,14 @@ textarea {
 
 .badge-icon > img {
   width: 40px;
+}
+
+#badge-details {
+  margin-top: 8rem;
+  border: 2px solid var(--light-pink);
+  -webkit-box-shadow: 0px 0px 23px 12px rgba(127, 1, 81, 0.93);
+  -moz-box-shadow: 0px 0px 23px 12px rgba(127, 1, 81, 0.93);
+  box-shadow: 0px 0px 23px 12px rgba(127, 1, 81, 0.93);
 }
 
 /* FOOTER */
