--- a/flask_app/templates/pages/badge.html
+++ b/flask_app/templates/pages/badge.html
@@ -37,9 +37,9 @@
         <li class="list-group-item">
           <div class="form-check">
             <label>Badge complete?</label>
-            <input class="form-check-input badge-checkbox" type="checkbox"
-            id="flexCheckDefault" data-badge-id="{{badge.id}}" {{
-            'checked="checked"' if badge.complete }} />
+            <input class="form-check-input" type="checkbox" id="badge-checkbox"
+            data-badge-id="{{badge.id}}" {{ 'checked="checked"' if
+            badge.complete }} />
           </div>
           <span>{{ badge.complete }}</span><span>{{ badge.date }}</span>
         </li>
