--- a/flask_app/static/css/style.css
+++ b/flask_app/static/css/style.css
@@ -144,6 +144,15 @@ textarea {
   box-shadow: 0px 0px 23px 12px rgba(127, 1, 81, 0.93);
 }
 
+.list-group {
+  padding: 2rem;
+}
+
+.list-group-item {
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+}
+
 #badge-complete-container {
   gap: 45px;
 }
