Style and layout changes for badge details

--- a/flask_app/static/css/style.css
+++ b/flask_app/static/css/style.css
@@ -136,12 +136,15 @@ textarea {
   width: 40px;
 }
 
-#badge-details {
-  margin-top: 8rem;
-  border: 2px solid var(--light-pink);
-  -webkit-box-shadow: 0px 0px 23px 12px rgba(127, 1, 81, 0.93);
-  -moz-box-shadow: 0px 0px 23px 12px rgba(127, 1, 81, 0.93);
-  box-shadow: 0px 0px 23px 12px rgba(127, 1, 81, 0.93);
+/* Badge Details */
+
+.card-header {
+  background: var(--rebel-pink);
+}
+
+#badge-detail-container {
+  margin-top: 15rem;
+  gap: 10rem;
 }
 
 .list-group {
@@ -153,8 +156,18 @@ textarea {
   padding-bottom: 1rem;
 }
 
+/* Clauses */
+#clause-table {
+  padding: 2rem;
+  background-color: transparent !important;
+}
+
 #badge-complete-container {
   gap: 45px;
+}
+
+#rating-container {
+  gap: 20px;
 }
 
 /* FOOTER */
