--- a/flask_app/static/css/style.css
+++ b/flask_app/static/css/style.css
@@ -143,8 +143,24 @@ textarea {
   background: var(--rebel-pink);
 }
 
-#badge-detail-container {
+#progress-bar-container {
   margin-top: 15rem;
+  margin-left: auto;
+  margin-right: auto;
+  width: 25%;
+}
+
+#progress-bar-container .progress {
+  height: 3rem;
+}
+
+#progress-bar-container .progress-bar {
+  height: 3rem;
+  font-size: 2rem;
+}
+
+#badge-detail-container {
+  margin-top: 5rem;
   gap: 10rem;
 }
 
