Added favicon and fixed bug

--- a/flask_app/templates/pages/badge.html
+++ b/flask_app/templates/pages/badge.html
@@ -116,7 +116,7 @@
             <label class="btn btn-outline-info" for="nextButton">Next</label>
 
             <input
-              id="nextButton"
+              id="purchasedButton"
               type="checkbox"
               class="btn-check tag-button"
               data-badge-id="{{badge.id}}"
@@ -131,7 +131,7 @@
               endif
               %}
             />
-            <label class="btn btn-outline-info" for="nextButton"
+            <label class="btn btn-outline-info" for="purchasedButton"
               >Purchased</label
             >
           </div>
