--- a/flask_app/templates/base.html
+++ b/flask_app/templates/base.html
@@ -9,6 +9,10 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Rebel Badge Tracker - {% block title %}{% endblock %}</title>
     <link
+      rel="shortcut icon"
+      href="{{ url_for('static', filename='favicon.ico') }}"
+    />
+    <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
