--- a/flask_app/templates/pages/badge.html
+++ b/flask_app/templates/pages/badge.html
@@ -20,9 +20,13 @@
     aria-valuemin="0"
     aria-valuemax="100"
   >
+    {% if badge.percentage %}
     <div class="progress-bar" style="width: {{ badge.percentage }}%">
       {{badge.percentage|percentage_format}}
     </div>
+    {% else %}
+    <h2 class="px-4">0%</h2>
+    {% endif %}
   </div>
 </div>
 <div id="badge-detail-container" class="row justify-content-evenly">
