--- a/flask_app/templates/pages/badge.html
+++ b/flask_app/templates/pages/badge.html
@@ -34,110 +34,148 @@
     <div id="badge-details" class="card" data-badge-id="{{badge.id}}">
       <h3 class="card-header">Details</h3>
       <ul class="list-group list-group-flush">
-        <li class="list-group-item">📘 Volume {{ badge.book }}</li>
-        <li class="list-group-item">
-          <span class="badge" style="background: {{ badge.colour}}"
-            >{{ badge.section }}</span
-          >
+        <li class="list-group-item d-flex flex-row">
+          <div class="col-4">📘 Volume</div>
+          <div class="col">{{ badge.book }}</div>
         </li>
         <li class="list-group-item d-flex flex-row">
-          <span>Rating</span>
-          <select
-            id="rating-select"
-            class="form-select w-25"
-            data-column-id="rating"
-            data-rating="{{badge.rating}}"
-            data-badge-id="{{badge.id}}"
-          >
-            <option value="None">None</option>
-            <option value="✖️">✖️</option>
-            <option value="🟢">🟢</option>
-            <option value="🟡">🟡</option>
-            <option value="🟠">🟠</option>
-            <option value="🔴">🔴</option>
-          </select>
-        </li>
-        <li class="list-group-item d-flex flex-row">
-          <span>Complete</span>
-          <div class="form-check">
-            <input class="form-check-input" type="checkbox" id="badge-checkbox"
-            data-badge-id="{{badge.id}}" {{ 'checked="checked"' if
-            badge.complete }} />
+          <div class="col-4">Section</div>
+          <div class="col">
+            <span class="badge" style="background: {{ badge.colour}}"
+              >{{ badge.section }}</span
+            >
           </div>
-          <input
-            id="badge-date"
-            class="form-control w-25"
-            type="date"
-            value="{{badge.date|date_format}}"
-            data-badge-id="{{badge.id}}"
-            data-column-id="date"
-          />
         </li>
         <li class="list-group-item d-flex flex-row">
-          <span>🏷️ Tags</span>
-          <div
-            id="badge-tag-group"
-            class="btn-group"
-            role="group"
-            aria-label="Badge tags"
-          >
-            <input
-              id="startedButton"
-              type="checkbox"
-              class="btn-check tag-button"
+          <div class="col-4"><span>Rating</span></div>
+          <div class="col">
+            <select
+              id="rating-select"
+              class="form-select w-25"
+              data-column-id="rating"
+              data-rating="{{badge.rating}}"
               data-badge-id="{{badge.id}}"
-              data-column-id="is_started"
-              autocomplete="off"
-              {%
-              if
-              badge.is_started
-              %}
-              checked="checked"
-              {%
-              endif
-              %}
-            />
-            <label class="btn btn-outline-info" for="startedButton"
-              >Started</label
             >
-
+              <option value="None">None</option>
+              <option value="✖️">✖️</option>
+              <option value="🟢">🟢</option>
+              <option value="🟡">🟡</option>
+              <option value="🟠">🟠</option>
+              <option value="🔴">🔴</option>
+            </select>
+          </div>
+        </li>
+        <li class="list-group-item d-flex flex-row">
+          <div class="col-4">
+            <span>Complete</span>
+          </div>
+          <div class="col d-flex flex-row">
+            <div class="form-check">
+              <input class="form-check-input" type="checkbox"
+              id="badge-checkbox" data-badge-id="{{badge.id}}" {{
+              'checked="checked"' if badge.complete }} />
+            </div>
             <input
-              id="nextButton"
-              type="checkbox"
-              class="btn-check tag-button"
+              id="badge-date"
+              class="form-control w-50"
+              type="date"
+              value="{{badge.date|date_format}}"
               data-badge-id="{{badge.id}}"
-              data-column-id="is_next"
-              autocomplete="off"
-              {%
-              if
-              badge.is_next
-              %}
-              checked="checked"
-              {%
-              endif
-              %}
+              data-column-id="date"
             />
-            <label class="btn btn-outline-info" for="nextButton">Next</label>
-
-            <input
-              id="purchasedButton"
-              type="checkbox"
-              class="btn-check tag-button"
-              data-badge-id="{{badge.id}}"
-              data-column-id="is_purchased"
-              autocomplete="off"
-              {%
-              if
-              badge.is_purchased
-              %}
-              checked="checked"
-              {%
-              endif
-              %}
-            />
-            <label class="btn btn-outline-info" for="purchasedButton"
-              >Purchased</label
+          </div>
+        </li>
+        <li class="list-group-item d-flex flex-row">
+          <div class="col-4">
+            <span>🏷️ Tags</span>
+          </div>
+          <div class="col">
+            <div
+              id="badge-tag-group"
+              class="btn-group"
+              role="group"
+              aria-label="Badge tags"
             >
+              <input
+                id="startedButton"
+                type="checkbox"
+                class="btn-check tag-button"
+                data-badge-id="{{badge.id}}"
+                data-column-id="is_started"
+                autocomplete="off"
+                {%
+                if
+                badge.is_started
+                %}
+                checked="checked"
+                {%
+                endif
+                %}
+              />
+              <label class="btn btn-outline-info" for="startedButton"
+                >Started</label
+              >
+
+              <input
+                id="nextButton"
+                type="checkbox"
+                class="btn-check tag-button"
+                data-badge-id="{{badge.id}}"
+                data-column-id="is_next"
+                autocomplete="off"
+                {%
+                if
+                badge.is_next
+                %}
+                checked="checked"
+                {%
+                endif
+                %}
+              />
+              <label class="btn btn-outline-info" for="nextButton">Next</label>
+
+              <input
+                id="purchasedButton"
+                type="checkbox"
+                class="btn-check tag-button"
+                data-badge-id="{{badge.id}}"
+                data-column-id="is_purchased"
+                autocomplete="off"
+                {%
+                if
+                badge.is_purchased
+                %}
+                checked="checked"
+                {%
+                endif
+                %}
+              />
+              <label class="btn btn-outline-info" for="purchasedButton"
+                >Purchased</label
+              >
+            </div>
+          </div>
+        </li>
+        <li class="list-group-item d-flex flex-row">
+          <div class="col-4">
+            <span>Link</span>
+          </div>
+          <div class="col d-flex flex-row">
+            <input id="input-link" type="text" />
+            <span id="link-text">{{badge.link}}</span>
+            <img
+              id="save-link-btn"
+              src="{{ url_for('static', filename='/icons/check.svg') }}"
+              title="Save"
+              data-badge-id="{{badge.id}}"
+            />
+          </div>
+          <div class="col-1">
+            <img
+              id="edit-link-btn"
+              src="{{ url_for('static', filename='/icons/edit.svg') }}"
+              title="Edit"
+            />
           </div>
         </li>
         <li class="list-group-item notes">
