Adding sections chart to home page

--- a/flask_app/templates/pages/home.html
+++ b/flask_app/templates/pages/home.html
@@ -1,5 +1,6 @@
 {% extends 'base.html' %} {% block content %}
 <h2>Overview</h2>
+<div class="row">{{chart|safe}}</div>
 <div class="row">
   <div class="col d-flex justify-content-evenly">
     <div class="card">
