Minor style & layout changes - add colour to badges on home page and fix alignment in badge table

--- a/flask_app/templates/badge_table.html
+++ b/flask_app/templates/badge_table.html
@@ -12,8 +12,8 @@
 </div>
 <div id="badge-table" class="table table-dark">
   <div class="row table-head">
-    <div class="col-auto">Icon</div>
-    <div class="col">Name</div>
+    <div class="col-1"></div>
+    <div class="col"></div>
     <div class="col">Progress</div>
     <div class="col">Rating</div>
     <div class="col-3">Notes</div>
