--- a/flask_app/static/css/style.css
+++ b/flask_app/static/css/style.css
@@ -188,6 +188,13 @@ textarea {
   background-color: transparent !important;
 }
 
+/* HOME PAGE */
+.section-square {
+  height: 20px;
+  width: 20px;
+  margin: 10px;
+}
+
 /* FOOTER */
 footer {
   background: #2c464e;
