--- a/frontend/src/assets/base.css
+++ b/frontend/src/assets/base.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Kode+Mono:wght@400..700&display=swap");
+
 *,
 *::before,
 *::after {
@@ -21,13 +23,11 @@
 
 body {
   min-height: 100vh;
-  color: var(--color-text);
+  color: white;
   background: var(--color-background);
   transition: color 0.5s, background-color 0.5s;
   line-height: 1.6;
-  font-family: Inter, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-    Oxygen, Ubuntu, Cantarell, "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
+  font-family: "Kode Mono", monospace;
   font-size: 15px;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
